@@ -33,6 +33,7 @@
 - convolution functions support complex images
 - im_blend() can have any format condition image and it's converted to uchar
 - security fix for vips-7.23 wrapper script (thanks Jay)
+- im_affine() has a larger safety margin
 
 12/5/10 started 7.22.2
 - the conditional image of ifthenelse can be any format, a (!=0) is added if
